<?xml version="1.0"?>

<resources>

    <string name="app_name">School Box</string>

    <string name="sign_up">Sign Up</string>

    <string name="submit">Submit</string>

    <string name="email">Email</string>

    <string name="name">Name</string>

    <string name="password">Password</string>

    <string name="phone_no">Phone No.</string>

    <string name="email_">Email</string>

    <string name="nameview">nameView</string>

    <string name="_email_">Email</string>

    <string name="title_activity_login">LoginActivity</string>

    <string name="prompt_email">Email</string>

    <string name="prompt_password">Password</string>

    <string name="action_sign_in">Sign in or register</string>

    <string name="action_sign_in_short">Sign in</string>

    <string name="welcome">"Welcome !"</string>

    <string name="invalid_username">Not a valid username</string>

    <string name="invalid_password">Password must be >5 characters</string>

    <string name="login_failed">"Login failed"</string>

    <string name="login">Login</string>

    <string name="welcome_back">Welcome Back :)</string>

    <string name="forgot_password">Forgot Password</string>

    <string name="user">User</string>

    <string name="already_have_an_account_login">Already Have an account?</string>

    <string name="_login">Login</string>

    <string name="school_box">School Box</string>

    <string name="student">Student</string>

    <string name="i_m_a">I\'m a...</string>

    <string name="image">Image</string>

    <string name="teacher">Teacher</string>

    <string name="title_activity_sign_up">SignUp</string>

    <!-- Strings used for fragments for navigation -->


    <string name="first_fragment_label">First Fragment</string>

    <string name="second_fragment_label">Second Fragment</string>

    <string name="next">Next</string>

    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>

    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="open_camera">Open Camera</string>

    <string name="todo">TODO</string>

    <string name="title_activity_registration">RegistrationActivity</string>
    >
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="drawer_open" />

    <string name="drawer_close" />

    <string name="title_activity_navigation">Navigation</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>

    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="nav_header_title">Android Studio</string>

    <string name="nav_header_subtitle">android.studio@android.com</string>

    <string name="nav_header_desc">Navigation header</string>

    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>

    <string name="menu_gallery">Gallery</string>

    <string name="menu_slideshow">Slideshow</string>

    <string name="open" />

    <string name="close" />

    <string name="home_work">Home Work</string>

    <string name="home_work1">Home Work</string>

    <string name="assignment">Assignment</string>

    <string name="home_work2">Home Work</string>

    <string name="classwork">ClassWork</string>

    <string name="fees">Fees</string>
    <string name="ncrd_s_sterling_school">NCRD\'s Sterling School</string>
    <string name="affiliated_to_cbse_new_delhi">(Affiliated to CBSE New Delhi)</string>
    <string name="main_office_555_666_88888">Main office: (555)666-88888</string>
    <string name="counseling_office_555_6666_88888">Counseling office:- (555)6666-88888</string>
    <string name="website_http_sterlingschool_in">Website:- http://sterlingschool.in/</string>
    <string name="principal_naina_shitole">Principal:- Naina Sharma</string>
    <string name="school_director_niranjan_kelshikar">School Director:- Niranjan Kelshikar</string>
    <string name="_20419771720">20419771720</string>
    <string name="since_2002">Since : 2002</string>
    <!--    <string name="google_maps_key" translatable="false" templateMergeStrategy="preserve"> </string>-->
</resources>