<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Academicsession">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        android:textStyle="bold" />


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_image"
        android:layout_width="244dp"
        android:layout_height="145dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:src="@drawable/img"
        app:civ_border_color="#FF000000"
        app:civ_border_width="2dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/baloo_bhaijaan"
        android:text="@string/affiliated_to_cbse_new_delhi"
        android:textColor="#FF5252"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/baloo_bhaijaan"
        android:text="@string/main_office_555_666_88888"
        android:textColor="#0C0B0B"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/baloo_bhaijaan"
        android:text="@string/counseling_office_555_6666_88888"
        android:textColor="#0C0B0B"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/baloo_bhaijaan"
        android:text="@string/website_http_sterlingschool_in"
        android:textColor="#0C0B0B"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/baloo_bhaijaan"
        android:text="@string/principal_naina_shitole"
        android:textColor="#0C0B0B"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/baloo_bhaijaan"
        android:text="@string/school_director_niranjan_kelshikar"
        android:textColor="#0C0B0B"
        android:textSize="20sp"
        android:textStyle="bold" />

</LinearLayout>