<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StudentSignUp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ContraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:backgroundTint="#FFFFFF"
        tools:context=".StudentSignUp"
        tools:layout_editor_absoluteX="51dp"
        tools:layout_editor_absoluteY="-16dp">

        <ImageButton
            android:id="@+id/SignUpBTN"
            android:layout_width="278dp"
            android:layout_height="66dp"
            android:background="@drawable/user_button"
            android:contentDescription="@string/student"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.803"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <TextView
            android:id="@+id/_textViewName4"
            android:layout_width="135dp"
            android:layout_height="33dp"
            android:fontFamily="@font/baloo_bhaijaan"
            android:text="@string/phone_no"
            android:textColor="#FF9800"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.184"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.446" />

        <TextView
            android:id="@+id/_dkdjf"
            android:layout_width="135dp"
            android:layout_height="33dp"
            android:fontFamily="@font/baloo_bhaijaan"
            android:text="@string/password"
            android:textColor="#F44336"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.188"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.611" />

        <EditText
            android:id="@+id/Name"
            style="@android:style/Widget.Holo.EditText"
            android:layout_width="305dp"
            android:layout_height="55dp"
            android:autofillHints=""
            android:ems="10"
            android:inputType="textPersonName"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.207"
            tools:ignore="LabelFor,SpeakableTextPresentCheck"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/_textviewlogin"
            android:layout_width="197dp"
            android:layout_height="49dp"
            android:fontFamily="@font/baloo_bhaijaan"
            android:text="@string/sign_up"
            android:textAlignment="center"
            android:textColor="#00A5A6"
            android:textSize="36sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.448"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.051" />

        <TextView
            android:id="@+id/_textViewName"
            android:layout_width="69dp"
            android:layout_height="28dp"
            android:fontFamily="@font/baloo_bhaijaan"
            android:text="@string/name"
            android:textColor="#FFEB3B"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.154"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.16" />

        <TextView
            android:id="@+id/_textViewName3"
            android:layout_width="69dp"
            android:layout_height="28dp"
            android:fontFamily="@font/baloo_bhaijaan"
            android:text="@string/email"
            android:textColor="#FFC107"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.154"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.308" />

        <EditText
            android:id="@+id/Email"
            android:layout_width="308dp"
            android:layout_height="56dp"
            android:autofillHints=""
            android:ems="10"
            android:inputType="textEmailAddress"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.362"
            tools:ignore="LabelFor,SpeakableTextPresentCheck,DuplicateClickableBoundsCheck"
            tools:visibility="visible" />

        <EditText
            android:id="@+id/Password"
            android:layout_width="307dp"
            android:layout_height="58dp"
            android:ems="10"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.461"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.683"
            tools:ignore="LabelFor,SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/Already__link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/baloo_bhaijaan"
            android:text="@string/already_have_an_account_login"
            android:textColor="#FF5722"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.475"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.868" />

        <TextView
            android:id="@+id/SignUp_Btn"
            android:layout_width="95dp"
            android:layout_height="33dp"
            android:fontFamily="@font/baloo_bhaijaan"
            android:text="@string/sign_up"
            android:textAlignment="center"
            android:textColor="#FFC107"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="@+id/SignUpBTN"
            app:layout_constraintEnd_toEndOf="@+id/SignUpBTN"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="@+id/SignUpBTN"
            app:layout_constraintTop_toBottomOf="@+id/Password"
            app:layout_constraintVertical_bias="0.673"
            tools:ignore="UnknownId" />

        <EditText
            android:id="@+id/PhoneNumber"
            android:layout_width="301dp"
            android:layout_height="64dp"
            android:ems="10"
            android:inputType="phone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.463"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.517"
            tools:ignore="SpeakableTextPresentCheck" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/_textViewName7"
        android:layout_width="135dp"
        android:layout_height="33dp"
        android:fontFamily="@font/baloo_bhaijaan"
        android:text="@string/phone_no"
        android:textColor="#FF9800"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.184"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.446" />

    <TextView
        android:id="@+id/_dkdjf3"
        android:layout_width="135dp"
        android:layout_height="33dp"
        android:fontFamily="@font/baloo_bhaijaan"
        android:text="@string/password"
        android:textColor="#F44336"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.188"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.611" />

    <TextView
        android:id="@+id/_textviewlogin3"
        android:layout_width="197dp"
        android:layout_height="49dp"
        android:fontFamily="@font/baloo_bhaijaan"
        android:text="@string/sign_up"
        android:textAlignment="center"
        android:textColor="#00A5A6"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.448"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.051" />

    <TextView
        android:id="@+id/_textViewName8"
        android:layout_width="69dp"
        android:layout_height="28dp"
        android:fontFamily="@font/baloo_bhaijaan"
        android:text="@string/name"
        android:textColor="#FFEB3B"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.154"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.16" />

    <TextView
        android:id="@+id/_textViewName9"
        android:layout_width="69dp"
        android:layout_height="28dp"
        android:fontFamily="@font/baloo_bhaijaan"
        android:text="@string/email"
        android:textColor="#FFC107"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.154"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.308" />

    <EditText
        android:id="@+id/email3"
        android:layout_width="308dp"
        android:layout_height="56dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textEmailAddress"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.362"
        tools:ignore="LabelFor,SpeakableTextPresentCheck"
        tools:visibility="visible" />

    <ImageButton
        android:id="@+id/goToLogin"
        android:layout_width="206dp"
        android:layout_height="50dp"
        android:background="@drawable/user_button"
        android:contentDescription="@string/student"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.962" />

    <TextView
        android:id="@+id/signUp_Btn6"
        android:layout_width="95dp"
        android:layout_height="33dp"
        android:fontFamily="@font/baloo_bhaijaan"
        android:text="@string/login"
        android:textAlignment="center"
        android:textColor="#FFC107"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/goToLogin"
        app:layout_constraintEnd_toEndOf="@+id/goToLogin"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="@+id/goToLogin"
        app:layout_constraintTop_toTopOf="@+id/goToLogin"
        app:layout_constraintVertical_bias="0.673" />

    <TextView
        android:id="@+id/already__link3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/baloo_bhaijaan"
        android:text="@string/already_have_an_account_login"
        android:textColor="#FF5722"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.475"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.868" />

</androidx.constraintlayout.widget.ConstraintLayout>